adjust box spacing in logo for flexibility,  edit file extension of some photos to uppercase since they were not showing in prod TEMP FIX

--- a/css/components/_artforms.scss
+++ b/css/components/_artforms.scss
@@ -43,13 +43,13 @@
         background-image: url(../images/artforms/kathakali.jpg);
         }
     &.mohiniyattam {
-        background-image: url(../images/artforms/mohiniyattam.jpg);
+        background-image: url(../images/artforms/mohiniyattam.JPG);
         }
     &.kalaripayyattu {
         background-image: url(../images/artforms/kalari.jpg);
         }
     &.bharathanatyam {
-        background-image: url(../images/artforms/bharathanatyam.jpg);
+        background-image: url(../images/artforms/bharathanatyam.JPG);
         }
     &.chutti {
         background-image: url(../images/artforms/chutti.jpg);
