--- a/css/components/_common-header.scss
+++ b/css/components/_common-header.scss
@@ -101,6 +101,7 @@
     line-height: .75;
     font-weight: 900;
     // padding-bottom: 10px;
+    padding-right: 30px;
     display: flex;
     flex-direction: column;
     }
@@ -158,7 +159,6 @@
     justify-content: space-between;
     font-size: .9rem;
     padding: 15px;
-    margin-right: 40px;
 
     .phone, .email {
         // padding: 10px 0 0;
