--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,7 @@ h2 {
   font-size: 2.2rem;
   line-height: .75;
   font-weight: 900;
+  padding-right: 30px;
   display: flex;
   flex-direction: column;
 }
@@ -263,7 +264,6 @@ h2 {
   justify-content: space-between;
   font-size: .9rem;
   padding: 15px;
-  margin-right: 40px;
 }
 
 .phone {
@@ -1197,7 +1197,7 @@ h2 {
 }
 
 .artform-block.mohiniyattam {
-  background-image: url(../images/artforms/mohiniyattam.jpg);
+  background-image: url(../images/artforms/mohiniyattam.JPG);
 }
 
 .artform-block.kalaripayyattu {
@@ -1205,7 +1205,7 @@ h2 {
 }
 
 .artform-block.bharathanatyam {
-  background-image: url(../images/artforms/bharathanatyam.jpg);
+  background-image: url(../images/artforms/bharathanatyam.JPG);
 }
 
 .artform-block.chutti {
